--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,4 @@
+
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #2c3e50;
@@ -16,6 +17,8 @@ body {
     text-align: center;
     width: 100%;
     max-width: 500px;
+    height: auto;
+    margin:  0 20px;
 }
 h2 {
     margin-bottom: 20px;
@@ -50,7 +53,7 @@ input[type="file"]:hover {
     font-weight: bold;
 }
 .output textarea {
-    width: 100%;
+    width:95%;
     padding: 10px;
     border-radius: 5px;
     border: none;
@@ -78,16 +81,33 @@ input[type="file"]:hover {
 .buttons button:hover {
     background-color: #2980b9;
 }
-.buttons button.copied {
+.buttons button.enabled {
     background-color: #2ecc71;
+}
+.buttons button.loading {
+    background-color: #f0f0f0;
+    cursor: not-allowed;
 }
 .buttons button.disabled {
     background-color: #95a5a6;
     cursor: not-allowed;
 }
+.buttons button.copied {
+    background-color: #2ecc71;
+}
+#copyButton{
+    cursor: pointer;
+}
+#copyButton:hover{
+    background-color: #2ecc71;
+}
 .preview-container {
     margin-top: 30px;
     text-align: center;
+}
+.status {
+    text-align: center;
+    margin-bottom: 10px;
 }
 img {
     max-width: 100%;
