--- a/public/style.css
+++ b/public/style.css
@@ -110,7 +110,8 @@ input[type="file"]:hover {
     margin-bottom: 10px;
 }
 img {
-    max-width: 100%;
+    margin: 0 auto;
+    max-width: 60%;
     height: auto;
     border-radius: 10px;
     margin-top: 20px;
